# golem-core-python

./: .gitignore  .requirements.txt  README.md  README_TASKS.md  attach.py  big_5_draft.py  blender.py  blender_mid.py  cli_example.sh  demo_examples.py  detached_activity.py  example_tasks.py  execute_tasks_hello_world.py  hl_blender.py  hl_hello_world.py  low_example.py  mid_example.py  mypy.sh  proxy_connect.py  pyproject.toml  redundance.py  sample_table.txt  service.py  workshop.py  workshop_internals.py  yacat.py  yacat_no_business_logic.py
.github/actions/integration-tests-goth/: action.yml
.github/workflows/: goth.yml  on_release.yml  tests-integration-ci.yml  tests-integration-nightly.yml  tests-unit.yml  tests.yml
_workshop_solutions/: blacklist_1.py  blacklist_2.py  repeat_failed.py  stats.py
docs/: 54-yapapi-dependencies.md
docs/sphinx/: api.rst  conf.py
examples/: attach.py  blender.py  cli_example.sh  core_example.py  detached_activity.py  execute_tasks_hello_world.py  low_example.py  pipeline_example.py  redundance.py  service.py  yacat.py  yacat_no_business_logic.py
examples/blender_image/: README.md  run-blender.sh
examples/exception_handling/: exception_handling.py
examples/interactive-cli/: interactive_cli.py
examples/managers/: basic_composition.py  example01.py  example02.py  example03.py  flexible_negotiation.py  mid_agreement_payments.py  plugins.py  proposal_plugins.py  ssh.py  whitelist.py
examples/managers/blender/: blender.py  frame_params.json
examples/rate_providers/: frame_params.json  rate_providers.py
examples/score_based_providers/: score_based_providers.py
examples/task_api_draft/: execute_tasks.py  redundance_manager.py
examples/task_api_draft/examples/: execute_tasks_hello_world.py  pipeline_example.py  redundance.py  yacat.py  yacat_no_business_logic.py
examples/task_api_draft/task_api/: activity_pool.py  execute_tasks.py  redundance_manager.py  task_data_stream.py
golem/: __main__.py  exceptions.py
golem/cli/: __init__.py  cli.py  utils.py
golem/event_bus/: __init__.py  base.py
golem/event_bus/in_memory/: __init__.py  event_bus.py
golem/managers/: __init__.py  base.py  mixins.py
golem/managers/activity/: __init__.py  defaults.py  mixins.py  pool.py  single_use.py
golem/managers/agreement/: __init__.py  default.py  events.py  plugins.py  pricings.py  scored_aot.py  single_use.py
golem/managers/demand/: __init__.py  aggregating.py  auto.py  refreshing.py  single_use.py  union.py
golem/managers/negotiation/: __init__.py  plugins.py  sequential.py
golem/managers/network/: __init__.py  single.py
golem/managers/payment/: __init__.py  default.py  (+2 more)
golem/node/: __init__.py  api.py  events.py  node.py
golem/payload/: __init__.py  base.py  constraints.py  defaults.py  exceptions.py  generic.py  mixins.py  parser.py  parser.tx  properties.py  vm.py
golem/pipeline/: __init__.py  buffer.py  chain.py  default_payment_handler.py  exceptions.py  map.py  sort.py  zip.py
golem/resources/: __init__.py  base.py  event_collectors.py  events.py  exceptions.py
golem/utils/: asyncio.py  blender_api.py  buffer.py  counter.py  logging.py  queue.py  semaphore.py  typing.py
golem_api/: __init__.py  __main__.py  commands.py  default_logger.py  default_payment_manager.py  event_bus.py  events.py  golem_node.py  payload.py
golem_api/cli/: __init__.py  utils.py
golem_api/high/: execute_tasks.py  redundance_manager.py  task_data_stream.py
golem_api/low/: __init__.py  activity.py  event_collector.py  exceptions.py  market.py  network.py  payment.py  payment_event_collector.py  resource.py  resource_internals.py  yagna_event_collector.py
golem_api/mid/: __init__.py  activity_creator.py  activity_pool.py  agreement_creator.py  buffer.py  buffered_pipe.py  chain.py  default_functions.py  default_negotiator.py  execute_tasks.py  limit.py  map.py  simple_scorer.py  task_executor.py  zip.py
golem_core/: __init__.py  __main__.py  commands.py  default_logger.py  default_payment_manager.py  event_bus.py  events.py  exceptions.py  golem_node.py
golem_core/cli/: __init__.py  cli.py  utils.py
golem_core/core/: exceptions.py
golem_core/demand_builder/: builder.py  model.py  props.py
golem_core/high/: execute_tasks.py  redundance_manager.py  task_data_stream.py
golem_core/low/: activity.py  agreement_event_collector.py  api_call_wrapper.py  api_factory.py  exceptions.py  market.py  network.py  payment.py  payment_event_collector.py  resource.py  resource_internals.py  utils.py  yagna_event_collector.py
golem_core/managers/: __init__.py  base.py  negotiation.py  offer.py
golem_core/mid/: activity_pool.py  buffer.py  chain.py  default_functions.py  exceptions.py  simple_scorer.py
golem_core/payload/: __init__.py  base.py  vm.py
golem_core/pieline/: __init__.py  buffer.py  chain.py  exceptions.py
golem_core/pipeline/: __init__.py  buffer.py  chain.py  exceptions.py  limit.py  map.py  sort.py  zip.py
golem_core/storage/: gftp.py
golem_core/utils/: asyncio.py  http.py  logging.py  typing.py
tasks/: __main__.py  activity_manager.py  cost_manager.py  create_activities.py  db.py  event_bus.py  event_writer.py  new_resource_manager.py  payment_manager.py  process_tasks.py  run.py  save_new_objects.py  task_executor.py
tasks/assets/: install.sql
tasks/cli/: __init__.py
test/: helpers.py  test_1.py  test_app_session_id.py  test_command.py  test_mid.py
tests/integration/: helpers.py  run-goth.sh  run-tests.sh  test_1.py  test_app_session_id.py
tests/unit/: conftest.py  test_app_session_id.py  test_command.py  test_demand_builder.py  test_demand_builder_model.py  test_demand_offer_cons.py  test_demand_offer_parsers.py  test_demand_offer_props.py  test_event_bus.py  test_manager_agreement_plugins.py  test_manager_proposal_plugins.py  test_managers_agreement_plugins.py  test_managers_demand.py  test_managers_mixins.py  test_managers_proposal_plugins_mid_agreement.py  test_managers_proposal_scorer.py  test_mid.py  test_payload.py  test_payload_cons.py  test_payload_parsers.py  test_payload_props.py
(+212 files in other folders)
