[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "golem-core"
version = "0.1.0"
description = "Python Golem (https://www.golem.network/) Core API"
authors = ["Jan Betley <jan.betley@golem.network>", "GolemFactory <contact@golem.network>"]
license = "LGPL-3.0-or-later"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing"
]
repository = "https://github.com/golemfactory/golem-core-python"

[tool.poetry.dependencies]
python = "^3.8.0"

#   TODO: We use quite a lot of yapapi dependencies that are not implicitly imported,
#         this should be fixed - but not now. First we must be sure what is the future of
#         golem_core, yapapi and how they are related.
yapapi = "^0.9.3"

#   CLI
prettytable = "^3.4.1"
click = "^8.1.3"

#   TODO: why isn't this auto-installed by mypy?
types-prettytable = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.19"
mypy = "^0.982"

sphinx = "^5.3.0"
sphinx-autodoc-typehints = "^1.19.2"
sphinx-rtd-theme = "^1.0.0"

poethepoet = "^0.8.0"

[tool.poetry.group.examples.dependencies]
asciimatics = "^1.14.0"

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "jsonrpc_base.*",
    "semantic_version.*",
    "async_exit_stack.*"
]
ignore_missing_imports = true

[tool.poe.tasks]
checks = {sequence = ["checks_typing"], help = "Run all available code checks"}
checks_typing = "mypy ."
tests = {sequence = ["tests_unit", "tests_integration"], help = "Run all available tests"}
tests_unit = {cmd = "pytest -sv tests/unit", env = { YAGNA_APPKEY = "test" }, help = "Run only unit tests"}
# `tests_integration` require yagna requestor with `YAGNA_APPKEY` in environement
tests_integration = {cmd = "pytest -sv tests/integration", help = "Run only integration tests"}

sphinx = "sphinx-build docs/sphinx/ build -E"

#   TODO check licence? Maybe just copy from yapapi?
